Fix action list spacing

--- a/backend/components/action/index.css
+++ b/backend/components/action/index.css
@@ -1,6 +1,7 @@
 /** @define Action */
 
 .Action {
+  line-height: calc(21rem / var(--base-font-size));
 }
 
 .Action-title {
